# autoDS-PET

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-docs.txt  requirements.txt
.github/workflows/: ci.yaml
autods_pet/: __init__.py  cli.py  config.py  deauville.py  io.py  labels.py  manifest.py  patient.py  pipeline.py  results.py
autods_pet/imaging/: __init__.py  dicom.py  geometry.py  normalization.py  registration.py  segmentation.py
autods_pet/ops/: __init__.py  dicom_seg.py  mask_discovery.py  masks.py  morphology.py  save_masks.py  stats.py
autods_pet/roi/: __init__.py  aorta_mbp.py  brain.py  liver.py  long_bones.py  lumbar_vb.py  target_roi.py
configs/: README.md  advanced.ini  brain.ini  full.ini  quick.ini  standard.ini
docs/: Makefile  cli.rst  conf.py  configuration.rst  getting-started.rst  index.rst  methods.rst  supported_formats.md
docs/_static/: custom.css
docs/api/: config.rst  deauville.rst  index.rst  io.rst  labels.rst  manifest.rst  patient.rst  pipeline.rst  results.rst
docs/api/imaging/: dicom.rst  geometry.rst  index.rst  normalization.rst  registration.rst  segmentation.rst
docs/api/ops/: dicom_seg.rst  index.rst  mask_discovery.rst  masks.rst  morphology.rst  save_masks.rst  stats.rst
docs/api/roi/: aorta_mbp.rst  brain.rst  index.rst  liver.rst  long_bones.rst  lumbar_vb.rst  target_roi.rst
tests/: conftest.py
tests/integration/: test_extract_all_references.py  test_roi_to_deauville.py
tests/unit/: conftest.py  test_cli.py  test_config.py  test_deauville.py  test_dicom.py  test_dicom_seg.py  test_geometry.py  test_hypothesis.py  test_init.py  test_io.py  test_manifest.py  test_masks.py  test_morphology.py  test_normalization.py  test_patient.py  test_pipeline.py  test_pipeline_class.py  test_registration.py  test_results.py  test_roi_aorta_mbp.py  test_roi_brain.py  test_roi_init.py  test_roi_liver.py  test_roi_long_bones.py  test_roi_lumbar_vb.py  test_roi_target_roi.py  test_save_masks.py  test_segmentation.py  test_stats.py
